Reduce diffs with upstream