@@ -3,19 +3,19 @@ plugins {
   id 'application'
 
   // To create a fat jar build/libs/...-all.jar, run: ./gradlew shadowJar
-  id 'com.gradleup.shadow' version '8.3.6'
+  id 'com.gradleup.shadow' version '8.3.7'
 
 /*
   // Code formatting; defines targets "spotlessApply" and "spotlessCheck"
   // Requires JDK 11 or higher; the plugin crashes under JDK 8.
-  id 'com.diffplug.spotless' version '7.0.3'
+  id 'com.diffplug.spotless' version '7.0.4'
 
   // Error Prone linter
-  id('net.ltgt.errorprone') version '4.2.0'
-*/
+  id('net.ltgt.errorprone') version '4.3.0'
 
   // Checker Framework pluggable type-checking
-  id 'org.checkerframework' version '0.6.53'
+  id 'org.checkerframework' version '0.6.55'
+*/
 }
 
 repositories {
@@ -27,7 +27,7 @@ dependencies {
   // This dependency is found on compile classpath of this component and consumers.
   implementation 'com.google.guava:guava:30.0-jre'
 
-  testImplementation("org.junit.jupiter:junit-jupiter:5.12.2")
+  testImplementation("org.junit.jupiter:junit-jupiter:5.13.2")
   testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
   // https://mvnrepository.com/artifact/org.ccil.cowan.tagsoup/tagsoup
@@ -36,11 +36,16 @@ dependencies {
   // https://mvnrepository.com/artifact/xom/xom
   implementation group: 'xom', name: 'xom', version: '1.3.5'
 
-  // errorprone 'com.google.errorprone:error_prone_core:2.9.0'
+  implementation 'org.checkerframework:checker-qual:3.+'
 }
 
 application {
   mainClass = 'org.plumelib.htmlprettyprint.HtmlPrettyPrint'
+}
+
+java {
+  sourceCompatibility = JavaVersion.VERSION_11
+  targetCompatibility = JavaVersion.VERSION_11
 }
 
 test {
@@ -50,9 +55,34 @@ test {
   }
 }
 
+/*
+
+spotless {
+  format 'misc', {
+    // define the files to apply `misc` to
+    target '*.md', '.gitignore'
+
+    // define the steps to apply to those files
+    trimTrailingWhitespace()
+    leadingTabsToSpaces(2)
+    endWithNewline()
+  }
+  java {
+    targetExclude('WeakIdentityHashMap.java')
+    googleJavaFormat()
+    formatAnnotations()
+  }
+  groovyGradle {
+    target '*.gradle'
+    greclipse()  // which formatter Spotless should use to format .gradle files.
+    leadingTabsToSpaces(2)
+    trimTrailingWhitespace()
+    // endWithNewline() // Don't want to end empty files with a newline
+  }
+}
+
 // Error Prone linter
 
-/*
 dependencies {
   errorprone("com.google.errorprone:error_prone_core:${errorproneVersion}")
 }
@@ -65,11 +95,9 @@ tasks.withType(JavaCompile).configureEach {
   }
   options.errorprone.enabled = isJava17orHigher
 }
-*/
 
 // Checker Framework pluggable type-checking
 
-/*
 apply plugin: 'org.checkerframework'
 
 checkerFramework {
@@ -98,7 +126,7 @@ checkerFramework {
 // To use a snapshot version of the Checker Framework.
 if (false) {
   // TODO: Change the above test to false when CF is released.
-  ext.checkerFrameworkVersion = '3.49.2'
+  ext.checkerFrameworkVersion = '3.49.4'
   dependencies {
     compileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
     testCompileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
@@ -126,6 +154,13 @@ if (project.hasProperty('cfLocal')) {
 javadoc {
   options.addStringOption('Xwerror', '-Xdoclint:all')
   options.addStringOption('private', '-quiet')
+  options.addStringOption('source', '11')
+  doLast {
+    ant.replaceregexp(match:"@import url\\('resources/fonts/dejavu.css'\\);\\s*", replace:'',
+    flags:'g', byline:true) {
+      fileset(dir: destinationDir)
+    }
+  }
 }
 check.dependsOn javadoc
 
@@ -133,7 +168,7 @@ configurations {
   requireJavadoc
 }
 dependencies {
-  requireJavadoc 'org.plumelib:require-javadoc:1.0.9'
+  requireJavadoc 'org.plumelib:require-javadoc:2.0.0'
 }
 task requireJavadoc(type: JavaExec) {
   group = 'Documentation'
@@ -141,6 +176,16 @@ task requireJavadoc(type: JavaExec) {
   mainClass = 'org.plumelib.javadoc.RequireJavadoc'
   classpath = configurations.requireJavadoc
   args 'src/main/java'
+  jvmArgs += [
+    '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+    '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+    '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+    '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+    '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+  ]
 }
 check.dependsOn requireJavadoc
 
